--- a/src/Contato.css
+++ b/src/Contato.css
@@ -1,128 +1,316 @@
 .contatoContainer {
+    position: relative;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    /* Alinha todos os elementos à esquerda */
+    align-items: center;
+    justify-content: center;
+}
 
+.containerRowColumn {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 .contatoImagem {
+    position: relative;
     width: 100%;
-    height: 60vw;
+    height: 40rem;
+    object-fit: cover;
+}
+
+.contatoInfo1 {
+    position: relative;
+    width: 15vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+
+.contatoInfo1 h1 {
+    color: white;
+}
+
+.contatoInfo1 h2 {
+    color: white;
+}
+
+.contatoInfo1 span {
+    color: white;
+    font-size: 1.4rem;
+}
+
+
+.contatoBackButton {
+    position: relative;
+    width: 100%;
+}
+
+.contatoH1 {
+    color: white;
+    font-size: 25px;
+    width: 40vw;
 }
 
 .contatoForm {
+
     display: flex;
     flex-direction: column;
-
+    align-items: center;
+    justify-content: center;
 }
 
 .contatoLabel {
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
-    width: 80vw;
-    margin-left: 5vw;
-    border: none;
-    color: var(--cor-terciaria);
-    outline: none;
-
-    font-size: 16px;
+    width: 32vw;
+    align-self: flex-start;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-top: 0.5rem;
 }
 
 .contatoInput {
-    margin-top: 5px;
-    width: 80vw;
-    height: 5vw;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border: none;
-    /*Removeaborda*/
-    outline: none;
-    /*Removeocontornoaofocarocampodeentrada*/
-    padding-left: 5px;
+    display: flex;
+    flex-direction: column;
+    width: 35vw;
+    align-self: start;
+    font-size: 0.9rem;
+    height: 3rem;
+    font-weight: bold;
+    margin-top: 0.5rem;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    padding-left: 7px;
 }
 
 .contatoTextarea {
-    margin-top: 5px;
-    width: 80vw;
-    height: 25vw;
-    /*Defineaalturadocampodetextoparaumvalormaior*/
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border: none;
-    /*Removeaborda*/
-    outline: none;
-    /*Removeocontornoaofocarocampodeentrada*/
-    padding: 5px;
-    -moz-border-radius: 3px;
+    display: flex;
+    flex-direction: column;
+    width: 35vw;
+    align-self: start;
+    font-size: 1rem;
+    height: 12rem;
+    font-weight: bold;
+    margin-top: 0.5rem;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    padding-left: 7px;
 }
 
 .contatoSubmit {
-    margin-top: 10px;
-    margin-left: 5vw;
+    background-color: white;
+    color: var(--cor-primaria);
+    padding: 5px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
     border: none;
-    border-radius: 4px;
-    width: 15vw;
-    padding: 1vw;
-    color: var(--cor-terciaria);
+    align-self: flex-end;
+    margin-top: 1vw;
+
+    margin-right: 5vw;
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    -ms-border-radius: 8px;
+    -o-border-radius: 8px;
+    font-family: 'Rubik', sans-serif;
+}
+
+.divColumn {
+    display: flex;
+    flex-direction: column;
+}
+
+.contatoInfoContainer {
+    display: flex;
+    flex-direction: column;
+    margin-left: 28vw;
+    gap: 3vw;
+}
+
+.posicaoAbsolutaDireita {
+    display: flex;
+    position: absolute;
+    left: 0%;
+    width: 100%;
+    justify-content: flex-end;
     margin-bottom: 5vw;
-    background-color: var(--cor-backgroundEscuro);
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
 }
 
-.contatoH1 {
-    margin-block: 5vw;
-    margin-left: 5vw;
-    color: var(--cor-terciaria);
-    font-size: 2.5vw;
-    font-weight: 400;
+.caretCircleLeftStyle {
+    color: white;
+    width: 150px;
+    height: 150px;
+    margin-right: 2rem;
 }
 
-@media (min-width: 600px) {
-    .contatoImagem {
-        height: 30vw;
+@media (max-width: 1140px) {
+    .contatoInfoContainer {
+        margin-left: 18vw;
+        margin-right: 9vw;
+
     }
 
-    .contatoLabel {
-        width: 40vw;
-        font-size: 4rem;
-    }
-
-    .contatoInput {
-        width: 40vw;
-        height: 3vw;
-        padding-left: 20px;
-        padding-top: 5px;
-    }
-
-    .contatoTextarea {
-        width: 40vw;
-        height: 9vw;
-        padding: 20px;
+    .contatoTextarea,
+    .contatoInput,
+    .contatoH1 {
+        width: 50vw;
     }
 
     .contatoSubmit {
-        width: 30vw;
-        padding: 2vw;
+        margin-right: 0;
+        margin: 15px 2px;
+    }
+
+    .caretCircleLeftStyle {
+        margin-right: 2rem;
+    }
+}
+
+
+
+
+
+@media (max-width: 600px) {
+    .posicaoAbsolutaDireita {
+        position: relative;
+        margin-left: 5vw;
+        justify-content: flex-end;
+        margin-bottom: 5vw;
+    }
+
+    .contatoBackButton {
+        position: relative;
+        width: 85%;
+    }
+
+    .caretCircleLeftStyle {
+        color: white;
+        width: auto;
+        height: 60px;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+
+    }
+}
+
+@media (max-width: 600px) {
+    .contatoContainer {
+        /* Seus estilos aqui */
+    }
+
+    .containerRowColumn {
+        flex-direction: column;
+    }
+
+    .contatoImagem {
+        /* Seus estilos aqui */
+    }
+
+    .contatoInfo1 {
+        /* Seus estilos aqui */
+    }
+
+    .contatoInfo1 h1 {
+        color: white;
+        font-size: 1.5rem;
+    }
+
+    .contatoInfo1 h2 {
+        font-size: 1rem;
+        font-weight: 400;
+    }
+
+    .contatoInfo1 span {
+        color: white;
+        font-size: 1.1rem;
+    }
+
+    .contatoBackButton {
+        /* Seus estilos aqui */
     }
 
     .contatoH1 {
-        font-size: 1.5vw;
+        width: auto;
+        padding: 1rem;
+        font-size: 1.2rem;
     }
 
-    .contatoInput::placeholder,
-    .contatoTextarea::placeholder {
-        color: #999;
-        font-size: 1.5rem;
+    .contatoForm {
+        width: auto;
+        padding: 1rem;
+    }
+
+    .contatoLabel {
+        font-size: 1.1rem;
+    }
+
+    .contatoInput {
+        width: 92vw;
+        padding: 1rem;
+    }
+
+    .contatoTextarea {
+        width: 92vw;
+        padding: 1rem;
+    }
+
+    .contatoSubmit {
+        padding: 10px 15px;
+        margin: 16px 0px;
+        align-self: center;
+    }
+
+    .divColumn {
+        /* Seus estilos aqui */
+    }
+
+    .contatoInfoContainer {
+        display: flex;
+        align-self: flex-start;
+        flex-direction: column;
+        margin-left: 1rem;
+        gap: 3vw;
+        margin-bottom: 5rem;
+      
+    }
+    .caretCircleLeftStyle {
+        color: white;
+        width: auto;
+        height: 60px;
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        margin-right: 0vw;
+
+    }
+    .contatoContainer img {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 }
