--- a/src/PrincipiosEditoriais.css
+++ b/src/PrincipiosEditoriais.css
@@ -18,7 +18,7 @@
 }
 
 .containerEsquerda h2 {
-    margin-block: 1.7vw;
+    margin-block: 1rem;
     color: white;
     font-family: 'Rubik', sans-serif;
 }
