--- a/src/Sobre.css
+++ b/src/Sobre.css
@@ -11,12 +11,21 @@
 .contatoContainer h1 {
     color: var(--cor-terciaria);
     font-size: 2rem;
-    padding: 2rem;
-
+    padding-block: 2rem;
+    letter-spacing: -0.58px;
     font-weight: 200;
+    line-height: 27px;
 }
 
 .contatoContainer h2 {
+    color: var(--cor-terciaria);
+    font-size: 2rem;
+
+    padding-top: 2rem;
+    font-weight: 200;
+    align-self: flex-start;
+}
+.sobreNos {
     color: var(--cor-terciaria);
     font-size: 2rem;
     padding-inline: 2rem;
@@ -24,7 +33,6 @@
     font-weight: 200;
     align-self: flex-start;
 }
-
 .lineSobre {
     height: 2px;
     width: 55%;
